--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "flowbite": "^2.3.0",
+    "flowbite-react": "^0.7.5",
     "plugin": "^0.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
